<resources>
    <string name="app_name">HotelFinderAndroid</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="logout">Logout</string>
    <string name="new_post">New Post</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">SAVE</string>
    <string name="search_hint">Enter Location e.g. Cochabamba, La Paz, Santa Cruz</string>
    <string name="search_button">Search Location</string>
    <string name="title_activity_signin">Hotel Finder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user_id">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_network">Network unavailable</string>
    <string name="error_invalid_user_id">Número de identificación inválido</string>
    <string name="my_profile">My Profile</string>
    <string name="user_information">USER INFORMATION</string>
    <string name="password_information">PASSWORD</string>
    <string name="txtResults">RESULTS:</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_map">View Map</string>
</resources>
